kubernetes/app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
  type: LoadBalancer
